force-app/main/default/objects/Account/fields/IdentificacaoFiscal__c.field-meta.xml
<CustomField>
    <fullName>IdentificacaoFiscal__c</fullName>
    <label>Identificação Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>