force-app/main/default/objects/Account/fields/IdentificacaoFiscalSemFormatacao__c.field-meta.xml
<CustomField>
    <fullName>IdentificacaoFiscalSemFormatacao__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( IdentificacaoFiscal__c, &apos;.&apos;,&apos;&apos; ), &apos;-&apos;,&apos;&apos; ),&apos;/&apos;,&apos;&apos; )</formula>
    <label>Identificação Fiscal sem formatação</label>
    <type>Text</type>
</CustomField>