force-app/main/default/objects/Account/fields/TipoIdentificacaoFiscal__c.field-meta.xml
<CustomField>
    <fullName>TipoIdentificacaoFiscal__c</fullName>
    <label>Tipo de Identificação Fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNPJ</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>